Fine tune fixes Changes some heights to min-heights to add adaptings section hieghts. This midigates some overflowing of content when you squish the page down with notable exception being the CTA Card.
If I were to do this project over again with the full use of CSS I would
find a completely different implimentation for the CTA card. "Responsive
design" and all that.

--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,10 @@ button {
 .content-container{
     display: flex;
     justify-content: center;
-    padding: 50 250px;
-    height: 400px;
+    flex-wrap: wrap;
+    padding: 50px 250px;
+    min-height: 400px;
+    gap: 80px;
 }
 
 .content-slide {
@@ -120,7 +122,7 @@ button {
 /* quote style */
 .quote-container,
 .cta-container{
-    height: 300px;
+    min-height: 300px;
     display: flex;
     justify-content: center;
     justify-items: center;
@@ -148,6 +150,13 @@ button {
     justify-content: space-between;
     align-items: center;
 }
+
+/* Fine tuning CTA Card */
+.cta-card h3{
+    font-size: 22px;
+    margin-bottom: -8px;
+}
+
 
 /* footer style */
 
